--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -13,7 +13,7 @@ html {
 }
 
 body {
-  @apply text-foreground bg-background;
+  @apply text-foreground bg-background overflow-x-hidden;
 }
 
 @layer base {
@@ -24,18 +24,18 @@ body {
     --card-foreground: 20 14.3% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
-    --primary: 24.6 95% 53.1%;
+    --primary: 25 100% 50%;
     --primary-foreground: 60 9.1% 97.8%;
     --secondary: 24 100% 95%;
     --secondary-foreground: 25 100% 41%;
     --muted: 60 4.8% 95.9%;
-    --muted-foreground: 25 5.3% 60.7%;
+    --muted-foreground: 25 5.3% 80.7%;
     --accent: 60 4.8% 95.9%;
     --accent-foreground: 24 9.8% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
     --border: 20 5.9% 90%;
-    --input: 20 5.9% 90%;
+    --input: 20 5.9% 87%;
     --ring: 24.6 95% 53.1%;
     --radius: 0.5rem;
     --chart-1: 12 76% 61%;
@@ -46,16 +46,22 @@ body {
   }
 }
 
+@layer utilities {
+  .text-balance {
+    text-wrap: balance;
+  }
+}
+
 * {
   font-family: var(--font-nunito), sans-serif;
 }
 
 .scrollbar::-webkit-scrollbar {
-  width: 4px;
+  width: 5px;
 }
 
 .scrollbar::-webkit-scrollbar-track {
-  border-radius: 6px;
+  border-radius: 8px;
   background: #fff;
 }
 
@@ -66,22 +72,4 @@ body {
 
 .scrollbar::-webkit-scrollbar-thumb:hover {
   background: #dbdadd;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
-#nprogress .bar {
-  @apply bg-primary !important;
-}
-
-#nprogress .peg {
-  @apply shadow-md shadow-primary !important;
-}
-
-#nprogress .spinner-icon {
-  @apply border-t-primary border-l-primary !important;
 }
